samples/_failures_safe/1761558514_c80cc7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_cace0f81.c: In function ‘main’:
./samples/SAFE/__tmp_cace0f81.c:179:5: error: expected declaration or statement at end of input
  179 |     }
      |     ^
